--- a/Monorail/Scenario2_ManagingMicrobit.xaml
+++ b/Monorail/Scenario2_ManagingMicrobit.xaml
@@ -9,33 +9,29 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         
-        <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-            
-            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Talking with Micro:bit board.</TextBlock>
+        <TextBlock Grid.Row="0" Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Talking with Micro:bit board</TextBlock>
 
-            <StackPanel Orientation="Horizontal">
+        <Image Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="ImageMicrobit" Width="74" Height="60" Source="Assets/microbit.png" Margin="0,0,5,5" />
 
-                <Image x:Name="ImageMicrobit" Width="80" Height="60" Source="Assets/microbit.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
-
-                <StackPanel Orientation="Vertical">
-                        
-                    <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="150">
-                        <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-                            <TextBlock FontStyle="Italic" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
-                            <TextBlock FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
-                        </StackPanel>
-                    </ScrollViewer>
-                </StackPanel>
-
+        <ScrollViewer Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="150">
+            <StackPanel Orientation="Vertical" Padding="5,5,5,5">
+                <TextBlock FontStyle="Italic" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                <TextBlock FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
             </StackPanel>
+        </ScrollViewer>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="A" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                <Button x:Name="ButtonB" Style="{StaticResource ButtonStyle}" Content="B" Click="{x:Bind ButtonB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                <Button x:Name="ButtonAB" Style="{StaticResource ButtonStyle}" Content="A + B" Click="{x:Bind ButtonAB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-            </StackPanel>
-
+        <StackPanel Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Horizontal">
+            <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="A" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+            <Button x:Name="ButtonB" Style="{StaticResource ButtonStyle}" Content="B" Click="{x:Bind ButtonB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+            <Button x:Name="ButtonAB" Style="{StaticResource ButtonStyle}" Content="A + B" Click="{x:Bind ButtonAB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
         </StackPanel>
 
     </Grid>
