--- a/Monorail/Scenario1_PairingDevice.xaml
+++ b/Monorail/Scenario1_PairingDevice.xaml
@@ -43,22 +43,19 @@
 
             <StackPanel Orientation="Vertical" Padding="5,5,5,5">
 
-                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Micro:bit board known.</TextBlock>
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Micro:bit board known</TextBlock>
                 
                 <StackPanel Orientation="Horizontal">
                     
-                    <Image x:Name="ImageMicrobit" Width="80" Height="60" Source="Assets/microbit.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
-                    
-                    <StackPanel Orientation="Vertical">
-                        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="170">
-                            <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-                                <TextBlock FontStyle="Italic" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
-                                <TextBlock FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
-                            </StackPanel>
-
-                        </ScrollViewer>
-                    </StackPanel>
-                    
+                    <Image x:Name="ImageMicrobit" Width="74" Height="60" Source="Assets/microbit.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
+                                       
+                    <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="175">
+                        <StackPanel Orientation="Vertical" Padding="5,5,5,5">
+                            <TextBlock FontStyle="Italic" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                            <TextBlock FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
+                        </StackPanel>
+                    </ScrollViewer>
+                                       
                 </StackPanel>
                 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
@@ -76,7 +73,7 @@
 
             <StackPanel Grid.Row="0" Orientation="Vertical" Padding="5,5,5,5">
 
-                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement.</TextBlock>
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement</TextBlock>
 
                 <Button x:Name="EnumerateButtonAdvertisement" Style="{StaticResource ButtonStyle}" Content="Run" Click="{x:Bind EnumerateButtonAdvertisement_Click}" Width="60" Height="30" Margin="0,0,5,0" />
 
@@ -92,7 +89,7 @@
 
             <StackPanel Grid.Row="0" Orientation="Vertical" Padding="5,5,5,5">
 
-                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate Paired BLE Device.</TextBlock>
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate Paired BLE Device</TextBlock>
 
                 <Button x:Name="EnumerateButtonDevice" Style="{StaticResource ButtonStyle}" Content="Run" Click="{x:Bind EnumerateButtonDevice_Click}" Width="60" Height="30" Margin="0,0,5,0" />
                 
