--- a/Monorail/Scenario3_ManagingMicrobit.xaml
+++ b/Monorail/Scenario3_ManagingMicrobit.xaml
@@ -8,7 +8,35 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+        <StackPanel Orientation="Vertical" Padding="5,5,5,5">
+
+            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (BlockyTalky)</TextBlock>
+
+            <Image x:Name="ImageMicrobit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="148" Height="120" Source="Assets/microbit.png" Margin="0,0,0,5" />
+
+            <ScrollViewer HorizontalAlignment="Left" VerticalAlignment="Top" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="180" Margin="0,0,0,5">
+                <StackPanel Orientation="Vertical" Padding="5,5,5,5">
+                    <TextBlock FontStyle="Italic" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                    <TextBlock FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
+                </StackPanel>
+            </ScrollViewer>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,5">
+                <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="A" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                <Button x:Name="ButtonB" Style="{StaticResource ButtonStyle}" Content="B" Click="{x:Bind ButtonB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                <Button x:Name="ButtonAB" Style="{StaticResource ButtonStyle}" Content="A + B" Click="{x:Bind ButtonAB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
+
+
+                <Button x:Name="ButtonAfficher" Style="{StaticResource ButtonStyle}" Content="Afficher" Click="{x:Bind ButtonAfficher_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+            </StackPanel>
+
+        </StackPanel>
 
     </Grid>
+
 </Page>
